--- a/pages/16197.html
+++ b/pages/16197.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6442/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6442/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1048,7 +1048,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#Idea">Idea</a></li><li><a href="#EmbeddingIntoSupergravity">Embedding into supergravity</a></li><li><a href="#references">References</a><ul><li><a href="#general">General</a></li><li><a href="#embedding_into_supergravity_2">Embedding into supergravity</a></li><li><a href="#ReferencesEmbeddingIntoStringTheory">Embedding into superstring theory</a></li></ul></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#Idea">Idea</a></li><li><a href="#EmbeddingIntoSupergravity">Embedding into supergravity</a></li><li><a href="#references">References</a><ul><li><a href="#general">General</a></li><li><a href="#embedding_into_supergravity_2">Embedding into supergravity</a></li><li><a href="#embedding_into_11d_supergravity">Embedding into 11d supergravity</a></li><li><a href="#ReferencesEmbeddingIntoStringTheory">Embedding into superstring theory</a></li></ul></li></ul></div>
 <h2 id="Idea">Idea</h2>
 
 <p>In <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a>, the <em>Starobinsky model</em> of <a class="existingWikiWord" href="/nlab/show/cosmic+inflation">cosmic inflation</a> takes into account – and takes as the very source of the <a class="existingWikiWord" href="/nlab/show/inflaton">inflaton</a> field – <a class="existingWikiWord" href="/nlab/show/higher+curvature+corrections">higher curvature corrections</a> to the <a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a> of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, notably the term <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>R</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">R^2</annotation></semantics></math> (square of the <a class="existingWikiWord" href="/nlab/show/Ricci+curvature">Ricci curvature</a>).</p>
@@ -1094,6 +1094,14 @@ margin-left: 0em;
 </center>
 <blockquote>
 <p>graphics grabbed from <a href="#Dalianis16">Dalianis 16, p. 8</a></p>
+</blockquote>
+
+<p id="HCCIn11dSugra"> More concretely, in <a href="#HiragaHyakutake18">Hiraga-Hyakutake 18</a> a simple model of <a class="existingWikiWord" href="/nlab/show/11-dimensional+supergravity">11-dimensional supergravity</a> with its <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>R</mi> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">R^4</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/higher+curvature+correction">higher curvature correction</a> (see <a href="11-dimensional+supergravity#HigherCurvatureCorrection">there</a>) is considered and claimed to yield inflation with “graceful exit” and dynamical <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a>:</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/W4Inflation.jpg" width="600" />
+</center>
+<blockquote>
+<p>graphics from <a href="#HiragaHyakutake18">Hiraga-Hyakutake 18, p. 8</a></p>
 </blockquote>
 
 <h2 id="references">References</h2>
@@ -1292,9 +1300,23 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id="embedding_into_11d_supergravity">Embedding into 11d supergravity</h3>
+
+<p>Discussion of Starobinsky inflation in <a class="existingWikiWord" href="/nlab/show/11-dimensional+supergravity">11-dimensional supergravity</a> with its <a class="existingWikiWord" href="/nlab/show/higher+curvature+corrections">higher curvature corrections</a> included (see <a href="11-dimensional+supergravity#HigherCurvatureCorrection">there</a>) is in</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Katrin+Becker">Katrin Becker</a>, <a class="existingWikiWord" href="/nlab/show/Melanie+Becker">Melanie Becker</a>, <em>Supersymmetry Breaking, M-Theory and Fluxes</em>, JHEP 0107:038,2001 (<a href="https://arxiv.org/abs/hep-th/0107044">arXiv:hep-th/0107044</a>)</p>
+</li>
+
+<li id="HiragaHyakutake18">
+<p>Kazuho Hiraga, Yoshifumi Hyakutake, <em>Inflationary Cosmology via Quantum Corrections in M-theory</em> (<a href="https://arxiv.org/abs/1809.04724">arXiv:1809.04724</a>)</p>
+</li>
+</ul>
+
 <h3 id="ReferencesEmbeddingIntoStringTheory">Embedding into superstring theory</h3>
 
-<p>Embedding into <a class="existingWikiWord" href="/nlab/show/superstring+theory">superstring theory</a> is discussed in</p>
+<p>Embedding of Starobinsky inflation into <a class="existingWikiWord" href="/nlab/show/superstring+theory">superstring theory</a> is discussed in</p>
 
 <ul>
 <li>
@@ -1327,14 +1349,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  7, 2018 at 05:25:10.
+  Last revised on September 14, 2018 at 15:54:19.
   See the <a href="https://ncatlab.org/nlab/history/Starobinsky model of cosmic inflation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Starobinsky+model+of+cosmic+inflation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Starobinsky+model+of+cosmic+inflation/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/Starobinsky+model+of+cosmic+inflation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Starobinsky+model+of+cosmic+inflation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Starobinsky+model+of+cosmic+inflation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Starobinsky+model+of+cosmic+inflation/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/Starobinsky+model+of+cosmic+inflation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Starobinsky+model+of+cosmic+inflation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Starobinsky model of cosmic inflation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
