--- a/pages/16201.html
+++ b/pages/16201.html
@@ -1051,7 +1051,7 @@ margin-left: 0em;
 <div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#general">General</a></li><li><a href="#in_11d_supergravity">In 11d Supergravity</a></li></ul></li></ul></div>
 <h2 id="idea">Idea</h2>
 
-<p>In the context of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> (<a class="existingWikiWord" href="/nlab/show/general+relativity">general relativity</a>), <em>higher curvature corrections</em> are modificatiosn of the <a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a> that include not just the linear appearance of the <a class="existingWikiWord" href="/nlab/show/scalar+curvature">scalar curvature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> but higher scalar powers of the <a class="existingWikiWord" href="/nlab/show/Riemann+curvature+tensor">Riemann curvature tensor</a>.</p>
+<p>In the context of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> (<a class="existingWikiWord" href="/nlab/show/general+relativity">general relativity</a>), <em>higher curvature corrections</em> are modifications of the <a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a> that include not just the linear appearance of the <a class="existingWikiWord" href="/nlab/show/scalar+curvature">scalar curvature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> but higher scalar powers of the <a class="existingWikiWord" href="/nlab/show/Riemann+curvature+tensor">Riemann curvature tensor</a>.</p>
 
 <p>When viewing Einstein-Hilbert <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a> as an <a class="existingWikiWord" href="/nlab/show/effective+field+theory">effective field theory</a> valid at low energy, then higher curvature corrections are precisely the terms that may appear at higher energy in pure gravity. Notably the effective field theories induced by <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> come with infinite towers of higher curvature corrections.</p>
 
@@ -1148,14 +1148,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 14, 2018 at 15:21:16.
+  Last revised on September 15, 2018 at 04:24:33.
   See the <a href="https://ncatlab.org/nlab/history/higher curvature correction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/higher+curvature+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+curvature+correction/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/higher+curvature+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+curvature+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/higher+curvature+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+curvature+correction/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/higher+curvature+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+curvature+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/higher curvature correction/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
