--- a/pages/16466.html
+++ b/pages/16466.html
@@ -317,24 +317,9 @@ margin-left: 0em;
 
 <h4 id="representation_theory">Representation theory</h4>
 
-<div class="hide"><html xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></strong></p>
-
-<p><strong><a class="existingWikiWord" href="/nlab/show/geometric+representation+theory">geometric representation theory</a></strong></p>
-
-<h2 id="ingredients">Ingredients</h2>
-
-<ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/geometric+representation+theory">geometric representation theory</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
 <li><a class="existingWikiWord" href="/nlab/show/linear+algebra">linear algebra</a>, <a class="existingWikiWord" href="/nlab/show/algebra">algebra</a>, <a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></li>
-</ul>
-
-<h2 id="definitions">Definitions</h2>
-
-<p><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/2-representation">2-representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></p>
-
-<ul>
+</ul><h2 id="definitions">Definitions</h2><p><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/2-representation">2-representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></p>
 </li>
@@ -390,11 +375,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/module+algebra">module algebra</a>, <a class="existingWikiWord" href="/nlab/show/comodule+algebra">comodule algebra</a>, <a class="existingWikiWord" href="/nlab/show/Hopf+action">Hopf action</a>, <a class="existingWikiWord" href="/nlab/show/measuring">measuring</a></p>
 </li>
-</ul>
-
-<h2 id="geometric_representation_theory">Geometric representation theory</h2>
-
-<ul>
+</ul><h2 id="geometric_representation_theory">Geometric representation theory</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/D-module">D-module</a>, <a class="existingWikiWord" href="/nlab/show/perverse+sheaf">perverse sheaf</a>,</p>
 </li>
@@ -418,11 +399,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/reconstruction+theorems">reconstruction theorems</a></p>
 </li>
-</ul>
-
-<h2 id="theorems">Theorems</h2>
-
-<ul>
+</ul><h2 id="theorems">Theorems</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Borel-Weil-Bott+theorem">Borel-Weil-Bott theorem</a></p>
 </li>
@@ -438,21 +415,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/BBDG+decomposition+theorem">BBDG decomposition theorem</a></p>
 </li>
-</ul>
-<div>
+</ul><div>
 <p><a href="/nlab/edit/representation+theory+-+contents">Edit this sidebar</a></p>
-</div></body></html></div>
+</div></div>
 
 <h4 id="monoidal_categories">Monoidal categories</h4>
 
-<div class="hide"><html xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p><strong><a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a></strong></p>
-
-<h2 id="with_symmetry">With symmetry</h2>
-
-<ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a></strong></p><h2 id="with_symmetry">With symmetry</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/braided+monoidal+category">braided monoidal category</a></p>
 </li>
@@ -468,11 +437,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+category">symmetric monoidal category</a></p>
 </li>
-</ul>
-
-<h2 id="with_duals_for_objects">With duals for objects</h2>
-
-<ul>
+</ul><h2 id="with_duals_for_objects">With duals for objects</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category+with+duals">category with duals</a> (list of them)</p>
 </li>
@@ -500,11 +465,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/compact+closed+category">compact closed category</a></p>
 </li>
-</ul>
-
-<h2 id="with_duals_for_morphisms">With duals for morphisms</h2>
-
-<ul>
+</ul><h2 id="with_duals_for_morphisms">With duals for morphisms</h2><ul>
 <li>
 <p><span class="newWikiWord">monoidal dagger-category<a href="/nlab/new/monoidal+dagger-category">?</a></span></p>
 </li>
@@ -516,11 +477,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/dagger+compact+category">dagger compact category</a></p>
 </li>
-</ul>
-
-<h2 id="with_traces">With traces</h2>
-
-<ul>
+</ul><h2 id="with_traces">With traces</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/trace">trace</a></p>
 </li>
@@ -528,11 +485,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/traced+monoidal+category">traced monoidal category</a></p>
 </li>
-</ul>
-
-<h2 id="closed_structure">Closed structure</h2>
-
-<ul>
+</ul><h2 id="closed_structure">Closed structure</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed monoidal category</a></p>
 </li>
@@ -548,11 +501,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/star-autonomous+category">star-autonomous category</a></p>
 </li>
-</ul>
-
-<h2 id="special_sorts_of_products">Special sorts of products</h2>
-
-<ul>
+</ul><h2 id="special_sorts_of_products">Special sorts of products</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cartesian+monoidal+category">cartesian monoidal category</a></p>
 </li>
@@ -564,11 +513,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/multicategory">multicategory</a></p>
 </li>
-</ul>
-
-<h2 id="semisimplicity">Semisimplicity</h2>
-
-<ul>
+</ul><h2 id="semisimplicity">Semisimplicity</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/semisimple+category">semisimple category</a></p>
 </li>
@@ -580,11 +525,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/modular+tensor+category">modular tensor category</a></p>
 </li>
-</ul>
-
-<h2 id="morphisms">Morphisms</h2>
-
-<ul>
+</ul><h2 id="morphisms">Morphisms</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+functor">monoidal functor</a></p>
 
@@ -598,11 +539,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+functor">symmetric monoidal functor</a></p>
 </li>
-</ul>
-
-<h2 id="internal_monoids">Internal monoids</h2>
-
-<ul>
+</ul><h2 id="internal_monoids">Internal monoids</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoid+in+a+monoidal+category">monoid in a monoidal category</a></p>
 </li>
@@ -614,11 +551,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/module+over+a+monoid">module over a monoid</a></p>
 </li>
-</ul>
-
-<h2 id="examples">Examples</h2>
-
-<ul>
+</ul><h2 id="examples">Examples</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a></p>
 </li>
@@ -630,11 +563,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Day+convolution">Day convolution</a></p>
 </li>
-</ul>
-
-<h2 id="theorems">Theorems</h2>
-
-<ul>
+</ul><h2 id="theorems">Theorems</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/coherence+theorem+for+monoidal+categories">coherence theorem for monoidal categories</a></p>
 </li>
@@ -642,11 +571,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul>
-
-<h2 id="in_higher_category_theory">In higher category theory</h2>
-
-<ul>
+</ul><h2 id="in_higher_category_theory">In higher category theory</h2><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+2-category">monoidal 2-category</a></p>
 
@@ -682,10 +607,9 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/compact+double+category">compact double category</a></p>
 </li>
-</ul>
-<div>
+</ul><div>
 <p><a href="/nlab/edit/monoidal+categories+-+contents">Edit this sidebar</a></p>
-</div></body></html></div>
+</div></div>
 
 <h4 id="superalgebra_and_supergeometry">Super-Algebra and Super-Geometry</h4>
 
@@ -2193,7 +2117,7 @@ r \;\colon\; (-) \otimes 1 \overset{\simeq}{\longrightarrow} (-)
 <div class="num_prop" id="CompactClosedMonoidalCategory">
 <h6 id="proposition_5">Proposition</h6>
 
-<p>Every <a class="existingWikiWord" href="/nlab/show/rigid+monoidal+category">rigid</a> (def. \refDualizableObject) <a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+category">symmetric monoidal category</a> (def. <a class="maruku-ref" href="#SymmetricMonoidalCategory"></a>) is a <a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed monoidal category</a> (def. <a class="maruku-ref" href="#ClosedMonoidalCategory"></a>) with <a class="existingWikiWord" href="/nlab/show/internal+hom">internal hom</a> between two objects given by the <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a> of the <a class="existingWikiWord" href="/nlab/show/codomain">codomain</a> object with the <a class="existingWikiWord" href="/nlab/show/dual+object">dual object</a> of the domain object</p>
+<p>Every <a class="existingWikiWord" href="/nlab/show/rigid+monoidal+category">rigid</a> <a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+category">symmetric monoidal category</a> (def. <a class="maruku-ref" href="#SymmetricMonoidalCategory"></a>) is a <a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed monoidal category</a> (def. <a class="maruku-ref" href="#ClosedMonoidalCategory"></a>) with <a class="existingWikiWord" href="/nlab/show/internal+hom">internal hom</a> between two objects given by the <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a> of the <a class="existingWikiWord" href="/nlab/show/codomain">codomain</a> object with the <a class="existingWikiWord" href="/nlab/show/dual+object">dual object</a> of the domain object</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>A</mi><mo>,</mo><mi>B</mi><mo stretchy="false">]</mo><mo>≃</mo><msup><mi>A</mi> <mo>*</mo></msup><mo>⊗</mo><mi>B</mi><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   [A,B] \simeq A^* \otimes B
   \,.
@@ -5373,14 +5297,14 @@ A \otimes 1
 
 <div class="revisedby">
   <p>
-  Last revised on September  7, 2018 at 07:23:45.
+  Last revised on September 15, 2018 at 09:37:12.
   See the <a href="https://ncatlab.org/nlab/history/Deligne&#39;s theorem on tensor categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Deligne%27s+theorem+on+tensor+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Deligne%27s+theorem+on+tensor+categories/73" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(73 revisions)</span> | <a href="/nlab/show/diff/Deligne%27s+theorem+on+tensor+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Deligne%27s+theorem+on+tensor+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Deligne%27s+theorem+on+tensor+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Deligne%27s+theorem+on+tensor+categories/74" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(74 revisions)</span> | <a href="/nlab/show/diff/Deligne%27s+theorem+on+tensor+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Deligne%27s+theorem+on+tensor+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Deligne&#39;s theorem on tensor categories/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
