--- a/pages/3485.html
+++ b/pages/3485.html
@@ -901,6 +901,10 @@ margin-left: 0em;
 <li id="BartelDokchitser14">
 <p>Alex Bartel, Tim Dokchitser, <em>Rational representations and permutation representations of finite groups</em>, Math. Ann. 364 no. 1 (2016), 539-558 (<a href="https://arxiv.org/abs/1405.6616">arXiv:1405.6616</a>)</p>
 </li>
+
+<li>
+<p>Vladimir V. Kornyak, <em>An Algorithm to Decompose Permutation Representations of Finite Groups: Polynomial Algebra Approach</em> (<a href="https://arxiv.org/abs/1801.09786">arXiv:1801.09786</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -920,14 +924,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 15, 2018 at 10:58:01.
+  Last revised on September 15, 2018 at 13:44:43.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
