--- a/pages/11534.html
+++ b/pages/11534.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8989/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8989/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -422,7 +422,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#Definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_spectra">Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Spectra</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>By the <em>Burnside category</em> of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> one means either</p>
@@ -441,7 +441,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>or by forming the <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+permutative+category">K-theory of a permutative category</a> of the <a class="existingWikiWord" href="/nlab/show/hom-groupoids">hom-groupoids</a> to a <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+of+spectra">spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+%28%E2%88%9E%2C1%29-category">enriched (∞,1)-category</a>.</p>
+<p>or by forming the <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+permutative+category">K-theory of a permutative category</a> of the <a class="existingWikiWord" href="/nlab/show/hom-groupoids">hom-groupoids</a> to a <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+of+spectra">spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+%28%E2%88%9E%2C1%29-category">enriched (∞,1)-category</a> (Def. <a class="maruku-ref" href="#SpectralBurnsideCategory"></a> below).</p>
 </li>
 </ol>
 </li>
@@ -449,7 +449,9 @@ margin-left: 0em;
 
 <p>Then <a class="existingWikiWord" href="/nlab/show/functors">functors</a>/<a class="existingWikiWord" href="/nlab/show/additive+functors">additive functors</a>/<a class="existingWikiWord" href="/nlab/show/enriched+%28%E2%88%9E%2C1%29-functors">enriched (∞,1)-functors</a> from the Burnside category to, in particular, the <a class="existingWikiWord" href="/nlab/show/category+of+abelian+groups">category of abelian groups</a>/<a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+of+spectra">(∞,1)-category of spectra</a> are called <em><a class="existingWikiWord" href="/nlab/show/Mackey+functors">Mackey functors</a></em>.</p>
 
-<h2 id="definition">Definition</h2>
+<p>A <a class="existingWikiWord" href="/nlab/show/functor">functor</a> out of the Burndside category is called a <em><a class="existingWikiWord" href="/nlab/show/Mackey+functor">Mackey functor</a></em>, specifically if it is an <a class="existingWikiWord" href="/nlab/show/Ab">Ab</a>-<a class="existingWikiWord" href="/nlab/show/enriched+functor">enriched functor</a> to <a class="existingWikiWord" href="/nlab/show/Ab">Ab</a> out of the <a class="existingWikiWord" href="/nlab/show/additive+category">additive category</a>-version of the Burnside category. A <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+functor">enriched functor</a> out of the spectral Burnside category to <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a> is called a <em><a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functor">spectral Mackey functor</a></em>, for emphasis. These spectral Mackey functors are <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28infinity%2C1%29-categories">equivalent</a> to <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a>.</p>
+
+<h2 id="Definition">Definition</h2>
 
 <div class="num_prop" id="PermutativeCategoryOfFiniteGSets">
 <h6 id="proposition">Proposition</h6>
@@ -476,7 +478,7 @@ margin-left: 0em;
 <div class="num_defn" id="AdditiveBurnsideCategory">
 <h6 id="definition_2">Definition</h6>
 
-<p><strong>(locall <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative</a> <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>)</strong></p>
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/PermCat">PermCat</a>-<a class="existingWikiWord" href="/nlab/show/enriched+category">enriched</a> <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>)</strong></p>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/%282%2C1%29-category+of+correspondences">(2,1)-category of correspondences</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Corr</mi><mo stretchy="false">(</mo><mi>G</mi><mi>FinSet</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Corr(G FinSet)</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28infinity%2C1%29-categories">equivalent</a> to the <a class="existingWikiWord" href="/nlab/show/%282%2C1%29-category">(2,1)-category</a> whose <a class="existingWikiWord" href="/nlab/show/objects">objects</a> are the <a class="existingWikiWord" href="/nlab/show/finite+set">finite</a> <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> and whose <a class="existingWikiWord" href="/nlab/show/hom-categories">hom-categories</a> are the <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative</a> <a class="existingWikiWord" href="/nlab/show/cores">cores</a> of <a class="existingWikiWord" href="/nlab/show/skeleta">skeleta</a> of <a class="existingWikiWord" href="/nlab/show/slice+categories">slice categories</a> of <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a> from Def. <a class="maruku-ref" href="#PermutativeCategoryOfFiniteGSets"></a>, over the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> of <a class="existingWikiWord" href="/nlab/show/source">source</a> and <a class="existingWikiWord" href="/nlab/show/domain">domain</a> <a class="existingWikiWord" href="/nlab/show/G-sets">G-sets</a>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Corr</mi><mo stretchy="false">(</mo><mi>G</mi><mi>FinSet</mi><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>S</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>S</mi> <mn>2</mn></msub><mo maxsize="1.2em" minsize="1.2em">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>Core</mi><mo stretchy="false">(</mo><mi>G</mi><msub><mi>FinSet</mi> <mi>sk</mi></msub><msub><mo stretchy="false">/</mo> <mrow><msub><mi>S</mi> <mn>1</mn></msub><mo>×</mo><msub><mi>S</mi> <mn>2</mn></msub></mrow></msub><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
@@ -486,12 +488,58 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>This locally skeletal <a class="existingWikiWord" href="/nlab/show/%282%2C1%29-category">(2,1)-category</a> is the <em>locally permutative version <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mi>ℰ</mi></mrow><annotation encoding="application/x-tex">G \mathcal{E}</annotation></semantics></math></em> of the <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>.</p>
+<p>This locally skeletal <a class="existingWikiWord" href="/nlab/show/%282%2C1%29-category">(2,1)-category</a> is the <em><a class="existingWikiWord" href="/nlab/show/PermCat">PermCat</a>-<a class="existingWikiWord" href="/nlab/show/enriched+category">enriched</a> Burnside category</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><msub><mi>Burn</mi> <mi>pc</mi></msub></mrow><annotation encoding="application/x-tex">G Burn_{pc}</annotation></semantics></math>_</p>
 
-<p>It may be regarded as an <a class="existingWikiWord" href="/nlab/show/enriched+category">enriched category</a> over the <a class="existingWikiWord" href="/nlab/show/multicategory">multicategory</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Perm</mi></mrow><annotation encoding="application/x-tex">Perm</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/permutative+categories">permutative categories</a> (a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>PC</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{PC}</annotation></semantics></math>-catgeory in the sense of <a href="#Guillout10">Guillout 10</a>)</p>
+<p>It may be regarded as an <a class="existingWikiWord" href="/nlab/show/enriched+category">enriched category</a> over the <a class="existingWikiWord" href="/nlab/show/multicategory">multicategory</a> <a class="existingWikiWord" href="/nlab/show/PermCat">PermCat</a> of <a class="existingWikiWord" href="/nlab/show/permutative+categories">permutative categories</a> (a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>PC</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{PC}</annotation></semantics></math>-cateory in the sense of <a href="#Guillout10">Guillout 10</a>).</p>
 </div>
 
 <p>(<a href="#GuillouMay11">Guillou-May 11, Def. 1.6</a>, <a href="#BohmannOsorno14">Bohmann-Osorno 14, Def. 7.1, 7.2</a>)</p>
+
+<div class="num_defn" id="SpectralBurnsideCategory">
+<h6 id="definition_3">Definition</h6>
+
+<p>(<strong><a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+category">enriched</a> <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>)</strong></p>
+
+<p>Since construction of <a class="existingWikiWord" href="/nlab/show/K-theory+spectra+of+permutative+categories">K-theory spectra of permutative categories</a> applies <a class="existingWikiWord" href="/nlab/show/hom-object">hom-object</a>-wise to <a class="existingWikiWord" href="/nlab/show/PermCat">PermCat</a>-<a class="existingWikiWord" href="/nlab/show/enriched+categories">enriched categories</a> (<a href="multifunctor#MonoidalFunctoriality">this Prop.</a>)</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>𝕂</mi> <mo>•</mo></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>PermCat</mi><mi>Cat</mi><mo>⟶</mo><mi>Spectra</mi><mi>Cat</mi></mrow><annotation encoding="application/x-tex">
+  \mathbb{K}_\bullet
+  \;\colon\;
+  PermCat Cat \longrightarrow Spectra Cat
+
+</annotation></semantics></math></div>
+<p>the image of the <a class="existingWikiWord" href="/nlab/show/PermCat">PermCat</a>-<a class="existingWikiWord" href="/nlab/show/enriched+category">enriched</a> <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mi>ℰ</mi></mrow><annotation encoding="application/x-tex">G \mathcal{E}</annotation></semantics></math> from Def. <a class="maruku-ref" href="#AdditiveBurnsideCategory"></a> under forming <a class="existingWikiWord" href="/nlab/show/hom-object">hom-object</a>-wise the <a class="existingWikiWord" href="/nlab/show/K-theory+spectra+of+permutative+categories">K-theory spectra of permutative categories</a> yields a <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+category">enriched category</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><msub><mi>Burn</mi> <mi>sp</mi></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><msub><mi>𝕂</mi> <mo>•</mo></msub><mi>G</mi><msub><mi>Burn</mi> <mi>pc</mi></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  G Burn_{sp}
+  \;\coloneqq\;
+  \mathbb{K}_\bullet G Burn_{pc}  
+  \,.
+
+</annotation></semantics></math></div>
+<p>This is called the <em>spectral Burnside category</em>.</p>
+</div>
+
+<p>(<a href="#GuillouMay11">Guillou-May 11, Def. 1.12</a>, <a href="#BohmannOsorno14">Bohmann-Osorno 14, Def. 7.3</a>)</p>
+
+<h2 id="properties">Properties</h2>
+
+<h3 id="relation_to_spectra">Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Spectra</h3>
+
+<div class="num_prop">
+<h6 id="proposition_2">Proposition</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/G-spectra">G-spectra</a> are spectral presheaves on the spectral Burnside category)</strong></p>
+
+<p>There is a <a class="existingWikiWord" href="/nlab/show/zig-zag">zig-zag</a> of <a class="existingWikiWord" href="/nlab/show/Quillen+equivalences">Quillen equivalences</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>G</mi><msub><mi>Burn</mi> <mi>sp</mi></msub><mo>,</mo><mi>Spectra</mi><mo stretchy="false">]</mo><mspace width="thickmathspace"></mspace><msubsup><mo>≃</mo> <mi>Qu</mi> <mi>zigzag</mi></msubsup><mspace width="thickmathspace"></mspace><mi>G</mi><mi>Spectra</mi></mrow><annotation encoding="application/x-tex">
+  [ G Burn_{sp}, Spectra ]
+  \;\simeq_{Qu}^{zigzag}\;
+  G Spectra
+
+</annotation></semantics></math></div>
+<p>between the <a class="existingWikiWord" href="/nlab/show/model+category">model category</a> of <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+presheaves">enriched presheaves</a> over the <a class="existingWikiWord" href="/nlab/show/spectral+Burnside+category">spectral Burnside category</a> from Def. <a class="maruku-ref" href="#SpectralBurnsideCategory"></a> (“<a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a>”) and that of <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a>.</p>
+</div>
+
+<p>(<a href="#GuillouMay11">GuillouMay 11, theorem 1.13</a>).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -546,7 +594,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 03:56:39.
+  Last revised on September 16, 2018 at 04:54:29.
   See the <a href="https://ncatlab.org/nlab/history/Burnside category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
