--- a/pages/11534.html
+++ b/pages/11534.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8989/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8989/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -524,7 +524,7 @@ margin-left: 0em;
 
 <h3 id="relation_to_spectra">Relation to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-Spectra</h3>
 
-<div class="num_prop">
+<div class="num_prop" id="GSpectraAreSpectralMackeyFunctors">
 <h6 id="proposition_2">Proposition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/G-spectra">G-spectra</a> are spectral presheaves on the spectral Burnside category)</strong></p>
@@ -536,10 +536,22 @@ margin-left: 0em;
   G Spectra
 
 </annotation></semantics></math></div>
-<p>between the <a class="existingWikiWord" href="/nlab/show/model+category">model category</a> of <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+presheaves">enriched presheaves</a> over the <a class="existingWikiWord" href="/nlab/show/spectral+Burnside+category">spectral Burnside category</a> from Def. <a class="maruku-ref" href="#SpectralBurnsideCategory"></a> (“<a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a>”) and that of <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a>.</p>
-</div>
+<p>between the <a class="existingWikiWord" href="/nlab/show/model+structure+on+functors">model category of</a> <a class="existingWikiWord" href="/nlab/show/Spectra">Spectra</a>-<a class="existingWikiWord" href="/nlab/show/enriched+presheaves">enriched presheaves</a> over the <a class="existingWikiWord" href="/nlab/show/spectral+Burnside+category">spectral Burnside category</a> from Def. <a class="maruku-ref" href="#SpectralBurnsideCategory"></a> (“<a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a>”) and that of <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a>.</p>
 
-<p>(<a href="#GuillouMay11">GuillouMay 11, theorem 1.13</a>).</p>
+<p>This equivalence is such that the <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functor">spectral Mackey functor</a> corresponding to a fibrant <a class="existingWikiWord" href="/nlab/show/G-spectrum">G-spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> assigns to the <a class="existingWikiWord" href="/nlab/show/transitive+action">transitive</a> <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>H</mi></mrow><annotation encoding="application/x-tex">G/H</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>E</mi> <mi>H</mi></msup></mrow><annotation encoding="application/x-tex">E^H</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>H</mi><mspace width="thickmathspace"></mspace><mo>↦</mo><mspace width="thickmathspace"></mspace><mi>E</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">/</mo><mi>H</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mo stretchy="false">[</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>G</mi><mo stretchy="false">/</mo><mi>H</mi><mo>,</mo><mi>E</mi><msup><mo stretchy="false">]</mo> <mi>G</mi></msup><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>E</mi> <mi>H</mi></msup><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  G/H 
+    \;\mapsto\; 
+  E(G/H)
+    \;\coloneqq\;
+  [\Sigma^\infty_G G/H, E]^G
+    \;\simeq\;
+  E^H
+  \,.
+
+</annotation></semantics></math></div></div>
+
+<p>(<a href="#GuillouMay11">GuillouMay 11, theorem 1.13, corollary 1.14, remark 2.5</a>).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -582,19 +594,13 @@ margin-left: 0em;
 <ul>
 <li id="Guillout10"><a class="existingWikiWord" href="/nlab/show/Bertrand+Guillou">Bertrand Guillou</a>, <em>Strictification of categories weakly enriched in symmetric monoidal categories</em>, Theory Appl. Categ., 24:No. 20, 564–579, 2010 (<a href="http://www.tac.mta.ca/tac//volumes/24/20/24-20abs.html">TAC</a>)</li>
 </ul>
-
-<p>See also</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/Michael+Hopkins">Michael Hopkins</a>, <a href="https://math.berkeley.edu/~aaron/ytm2012/hopkins.pdf">pdf</a></li>
-</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 04:54:29.
+  Last revised on September 16, 2018 at 05:23:18.
   See the <a href="https://ncatlab.org/nlab/history/Burnside category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
