--- a/pages/16965.html
+++ b/pages/16965.html
@@ -556,6 +556,17 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
+<p>Here the first summand is the <em><a class="existingWikiWord" href="/nlab/show/geometric+fixed+point+spectrum">geometric fixed point spectrum</a></em> inside the full <a class="existingWikiWord" href="/nlab/show/fixed+point+spectrum">fixed point spectrum</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>Φ</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>Σ</mi> <mn>∞</mn></msup><mo stretchy="false">(</mo><msup><mi>X</mi> <mi>G</mi></msup><mo stretchy="false">)</mo><mo>↪</mo><msup><mi>F</mi> <mi>G</mi></msup><mo stretchy="false">(</mo><msubsup><mi>Σ</mi> <mi>G</mi> <mn>∞</mn></msubsup><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  \Phi^G(\Sigma^\infty_G X) 
+  \;\simeq\; 
+  \Sigma^\infty( X^G )
+  \hookrightarrow
+  F^G(\Sigma^\infty_G X)
+
+</annotation></semantics></math></div>
+<p>(<a href="#Schwede15">Schwede 15, Example 7.7</a>)</p>
+
 <h3 id="for_equivariant_homotopy_groups">For equivariant homotopy groups</h3>
 
 <p>It follows that for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> a pointed <a class="existingWikiWord" href="/nlab/show/topological+G-space">topological G-space</a> then its <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+groups">equivariant homotopy groups</a> are</p>
@@ -583,11 +594,11 @@ margin-left: 0em;
 <h3 id="for_rational_equivariant_homotopy_theory">For rational equivariant homotopy theory</h3>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> finite and for <a class="existingWikiWord" href="/nlab/show/rational+equivariant+stable+homotopy+theory">rational equivariant stable homotopy theory</a> this becomes (<a href="#Greenlees">Greenlees, 6.2</a>)</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><mi>RationalSpectra</mi><mo>≃</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">∏</mo><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></munder><mi>ℚ</mi><mo stretchy="false">(</mo><mi>W</mi><mi>H</mi><mo stretchy="false">)</mo><mi>Mod</mi></mrow><annotation encoding="application/x-tex">
-  G RationalSpectra \simeq \underset{[H \subset G] }{\prod} \mathbb{Q}(W H) Mod
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><mi>RationalSpectra</mi><mo>≃</mo><munder><mo lspace="thinmathspace" rspace="thinmathspace">∏</mo><mrow><mo stretchy="false">[</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo stretchy="false">]</mo></mrow></munder><mi>ℚ</mi><mo stretchy="false">(</mo><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi><mo stretchy="false">)</mo><mi>Mod</mi></mrow><annotation encoding="application/x-tex">
+  G RationalSpectra \simeq \underset{[H \subset G] }{\prod} \mathbb{Q}(W_G H) Mod
 
 </annotation></semantics></math></div>
-<p>where the product is over <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>W</mi><mi>H</mi></mrow><annotation encoding="application/x-tex">W H</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/Weyl+group">Weyl group</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math></p>
+<p>where the product is over <a class="existingWikiWord" href="/nlab/show/conjugacy+classes">conjugacy classes</a> of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>W</mi> <mi>G</mi></msub><mi>H</mi></mrow><annotation encoding="application/x-tex">W_G H</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/Weyl+group">Weyl group</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math></p>
 
 <h2 id="examples">Examples</h2>
 
@@ -639,14 +650,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 02:16:38.
+  Last revised on September 16, 2018 at 05:57:11.
   See the <a href="https://ncatlab.org/nlab/history/tom Dieck splitting" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/tom+Dieck+splitting" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tom+Dieck+splitting/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/tom+Dieck+splitting" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tom+Dieck+splitting" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/tom Dieck splitting/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
