--- a/pages/4173.html
+++ b/pages/4173.html
@@ -1048,7 +1048,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>The theory called <em>the theory of general relativity</em> is the <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical field theory</a> that in <a class="existingWikiWord" href="/nlab/show/physics">physics</a> describes the field of <a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>.</p>
@@ -1093,7 +1093,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id="references">References</h2>
+<h2 id="References">References</h2>
 
 <ul>
 <li>
@@ -1130,7 +1130,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 04:58:38.
+  Last revised on September 16, 2018 at 05:02:01.
   See the <a href="https://ncatlab.org/nlab/history/general relativity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
