--- a/pages/11534.html
+++ b/pages/11534.html
@@ -574,7 +574,7 @@ margin-left: 0em;
 <p>Lecture notes include:</p>
 
 <ul>
-<li id="Blumberg17"><a class="existingWikiWord" href="/nlab/show/Andrew+Blumberg">Andrew Blumberg</a>, <em>The Burnside category</em>, 2017 (<a href="https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf">pdf</a>, <a href="https://github.com/adebray/equivariant_homotopy_theory">GitHub</a>)</li>
+<li id="Blumberg17"><a class="existingWikiWord" href="/nlab/show/Andrew+Blumberg">Andrew Blumberg</a>, section 3.1 of <em>The Burnside category</em>, 2017 (<a href="https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf">pdf</a>, <a href="https://github.com/adebray/equivariant_homotopy_theory">GitHub</a>)</li>
 </ul>
 
 <p>The spectrally-enriched version and its role in the equivalent description of <a class="existingWikiWord" href="/nlab/show/G-spectra">G-spectra</a> via <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a> is due to</p>
@@ -600,14 +600,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 05:23:18.
+  Last revised on September 16, 2018 at 06:29:23.
   See the <a href="https://ncatlab.org/nlab/history/Burnside category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+category/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Burnside+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+category/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Burnside+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
