--- a/pages/2040.html
+++ b/pages/2040.html
@@ -750,12 +750,20 @@ margin-left: 0em;
 <p>Reviews and surveys include</p>
 
 <ul>
+<li id="Blumberg17">
+<p><a class="existingWikiWord" href="/nlab/show/Andrew+Blumberg">Andrew Blumberg</a>, section 3.2 of <em>The Burnside category</em>, 2017 (<a href="https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf">pdf</a>, <a href="https://github.com/adebray/equivariant_homotopy_theory">GitHub</a>)</p>
+</li>
+
 <li id="GreenleesMay95">
 <p><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, <a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em>Equivariant stable homotopy theory</em>, in I.M. James (ed.), <em>Handbook of Algebraic Topology</em> , pp. 279-325. 1995. (<a href="http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf">pdf</a>)</p>
 </li>
 
 <li id="May96">
 <p><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, section IX.4 of <em>Equivariant homotopy and cohomology theory</em> CBMS Regional Conference Series in Mathematics, vol. 91, Published for the Conference Board of the Mathematical Sciences, Washington, DC, 1996. With contributions by M. Cole, G. Comezana, S. Costenoble, A. D. Elmenddorf, J. P. C. Greenlees, L. G. Lewis, Jr., R. J. Piacenza, G. Triantafillou, and S. Waner. (<a href="http://www.math.rochester.edu/u/faculty/doug/otherpapers/alaska1.pdf">pdf</a>)</p>
+</li>
+
+<li id="Schwede15">
+<p><a class="existingWikiWord" href="/nlab/show/Stefan+Schwede">Stefan Schwede</a>, around p. 16 of <em><a class="existingWikiWord" href="/nlab/show/Lectures+on+Equivariant+Stable+Homotopy+Theory">Lectures on Equivariant Stable Homotopy Theory</a></em>, 2015 (<a href="http://www.math.uni-bonn.de/people/schwede/equivariant.pdf">pdf</a>)</p>
 </li>
 
 <li>
@@ -831,12 +839,6 @@ margin-left: 0em;
 <li id="BohmannOsorno14"><a class="existingWikiWord" href="/nlab/show/Anna+Marie+Bohmann">Anna Marie Bohmann</a>, <a class="existingWikiWord" href="/nlab/show/Ang%C3%A9lica+Osorno">Angélica Osorno</a>, <em>Constructing equivariant spectra via categorical Mackey functors</em>, Algebraic &amp; Geometric Topology 15.1 (2015): 537-563 (<a href="http://arxiv.org/abs/1405.6126">arXiv:1405.6126</a>)</li>
 </ul>
 
-<p>Lectures notes include</p>
-
-<ul>
-<li id="Schwede15"><a class="existingWikiWord" href="/nlab/show/Stefan+Schwede">Stefan Schwede</a>, around p. 16 of <em><a class="existingWikiWord" href="/nlab/show/Lectures+on+Equivariant+Stable+Homotopy+Theory">Lectures on Equivariant Stable Homotopy Theory</a></em>, 2015 (<a href="http://www.math.uni-bonn.de/people/schwede/equivariant.pdf">pdf</a>)</li>
-</ul>
-
 <p>Application of Mackey functors to the theory of <a class="existingWikiWord" href="/nlab/show/motives">motives</a> includes</p>
 
 <ul>
@@ -854,14 +856,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 05:27:02.
+  Last revised on September 16, 2018 at 06:35:47.
   See the <a href="https://ncatlab.org/nlab/history/Mackey functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Mackey+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Mackey+functor/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/Mackey+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Mackey+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Mackey functor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
